# fast-tag

./: .gitignore  CLAUDE.md  Cargo.toml  docker-compose.test.yaml  docker-compose.yml
.claude/: settings.local.json
.claude/commands/: fix-warning.md
api/: .env.example  .env.test  Cargo.toml  README.md
api/migrations/: 001_create_users_table.sql  002_create_pending_auths_table.sql  003_create_projects_table.sql  004_create_tasks_table.sql  005_add_storage_config_to_projects.sql  006_create_project_syncs_table.sql  007_add_annotation_type_to_projects.sql  008_create_annotations_schema.sql  009_add_image_dimensions_to_tasks.sql
api/src/: annotations.rs  auth.rs  export.rs  image_annotation_categories.rs  main.rs  projects.rs  sync.rs  tasks.rs  test_utils.rs
api/src/coco/: export.rs  import.rs  mod.rs  tests.rs  types.rs
api/src/storage/: config.rs  factory.rs  handlers.rs  mod.rs  tests.rs
api/src/storage/providers/: azure.rs  gcs.rs  local.rs  mod.rs  s3.rs
api/src/sync/: tests.rs
api/src/tasks/: tests.rs
app/: .env.example  Cargo.toml
app/src/: auth.rs  main.rs
app/src/annotations/: client.rs  mod.rs
app/src/api/: annotations.rs  auth.rs  categories.rs  client.rs  export.rs  import.rs  mod.rs  projects.rs  resources.rs  sync.rs  tasks.rs
app/src/app/: state.rs
app/src/core/: commands.rs  interactions.rs  mod.rs  rectangle.rs
app/src/io/: image_loader.rs
app/src/pages/: detail.rs  list.rs  login.rs  project_settings.rs  projects.rs  tasks.rs
app/src/sync/: mod.rs
app/src/ui/: detail_ui.rs  mod.rs
app/src/ui/components/: egui_common.rs  mod.rs
scripts/: get_jwt_token.py  test_storage_api.py
src/: camera_controls.rs  detail_ui.rs  interactions.rs  main.rs  state.rs
src/core/: commands.rs  interactions.rs  mod.rs
src/io/: image_loader.rs
src/pages/: detail.rs  list.rs
src/pages/components/: egui_common.rs  mod.rs
src/ui/: detail_ui.rs
src/ui/components/: egui_common.rs
