[package]
name = "fast-tag"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.16.0"
futures-lite = "2.6.0"
image = "0.25.6"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }

[workspace]
resolver = "2"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
