[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "sqlite", "mysql", "chrono", "uuid", "migrate"] }
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json"] }
jsonwebtoken = "9"
oauth2 = "4"
url = "2"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
bytes = "1.0"
mime_guess = "2.0"
actix-multipart = "0.7"
futures-util = "0.3"
image = "0.25"

# AWS S3 / MinIO - using rusoto for better stability
rusoto_core = "0.48"
rusoto_s3 = "0.48"
rusoto_credential = "0.48"

# For now, implement simpler versions for Azure and GCS
# These can be expanded with proper SDKs later

[dev-dependencies]
serial_test = "3"
tempfile = "3"
