[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.16.0"
bevy_egui = "0.34.1"
chrono = { version = "0.4", features = ["serde"] }
futures-lite = "2.6.0"
image = "0.25.6"
open = "5.0"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
urlencoding = "2.1"
uuid = { version = "1.10", features = ["serde", "v4"] }